# impromptu

./: LICENSE  README.md  pyproject.toml
src/impromptu/: agent.py  agent_manager.py  agents.py  config.py  file_watcher.py  hooks.py  main.py  models.py  protocols.py  setup_modal.py  socket_server.py  state.py  state_provider.py  theme.py  tmux.py
src/impromptu/assets/css/: modals.tcss  sidebar.tcss
src/impromptu/configs/: default.toml
src/impromptu/hooks/gemini/: config.json  hook.sh
src/impromptu/ui/: __init__.py  agent_list.py  modals.py  notification.py  sidebar.py
src/impromptu/widgets/: __init__.py  agent_sidebar.py  chat_input.py  content_viewer.py  settings_screen.py  thinking_view.py
