[project]
name = "impromptu"
version = "0.1.0"
description = "Multi-agent TUI for managing AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "platformdirs>=4.5.1",
    "textual>=7.0.3",
    "watchdog>=6.0.0",
]

[project.scripts]
imp = "impromptu.main:main"

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
]
